lib/src/compiler/tests/testdata/errors/102.out
error[E001]: syntax error
 --> line:3:18
  |
3 |     $a = { 11 [-1-65535] 22 }
  |                  ^ expecting `]`, found `-`
  |